gitignore: add git.mk
Initialized from
https://raw.githubusercontent.com/behdad/git.mk/3c7b6e223fe472df51c853558d5c0acd3ee80a23/git.mk

--- a/Makefile.am
+++ b/Makefile.am
@@ -8,7 +8,14 @@ EXTRA_DIST = \
   autogen.sh \
   $(empty)
 
+GITIGNOREFILES = \
+  $(DIST_ARCHIVES) \
+  $(empty)
+
 MAINTAINERCLEANFILES = \
+  $(GITIGNORE_MAINTAINERCLEANFILES_TOPLEVEL) \
+  $(GITIGNORE_MAINTAINERCLEANFILES_M4_LIBTOOL) \
+  $(GITIGNORE_MAINTAINERCLEANFILES_MAKEFILE_IN) \
   $(srcdir)/ChangeLog \
   $(srcdir)/INSTALL \
   $(srcdir)/m4/gtk-doc.m4 \
@@ -67,5 +74,6 @@ ChangeLog:
 	fi
 
 CLEANFILES += $(BUILT_SOURCES)
+GITIGNOREFILES += $(BUILT_SOURCES)
 
 -include $(top_srcdir)/git.mk
