--- a/configure.ac
+++ b/configure.ac
@@ -70,6 +70,7 @@ GSTPB_REQUIRED=1.0.0
 PKG_CHECK_MODULES(GST, [
   gstreamer-1.0 >= $GST_REQUIRED
   gstreamer-app-1.0 >= $GSTPB_REQUIRED
+  gstreamer-video-1.0 >= $GSTPB_REQUIRED
 ], [
   AC_SUBST(GST_CFLAGS)
   AC_SUBST(GST_LIBS)
