--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,8 @@ stages:
       build-essential \
       libgstreamer1.0-dev \
       libgstreamer-plugins-base1.0-dev \
-      pkg-config
+      pkg-config \
+      systemd
 
 dist:
   stage: dist
