--- a/data/systemd/v4l2-relayd.service
+++ b/data/systemd/v4l2-relayd.service
@@ -12,7 +12,7 @@ ExecCondition=/usr/bin/test -n "$WIDTH"
 ExecCondition=/usr/bin/test -n "$HEIGHT"
 ExecCondition=/usr/bin/test -n "$FRAMERATE"
 ExecCondition=/usr/bin/test -n "${CARD_LABEL}"
-ExecStart=/bin/sh -c 'DEVICE=$(grep -l -m1 -E "^${CARD_LABEL}$" /sys/devices/virtual/video4linux/*/name | cut -d/ -f6); exec /usr/bin/v4l2-relayd -i "${VIDEOSRC} ! appsink name=appsink" -o "appsrc name=appsrc caps=video/x-raw,format=${FORMAT},width=${WIDTH},height=${HEIGHT},framerate=${FRAMERATE} ! videoconvert ! v4l2sink name=v4l2sink device=/dev/$${DEVICE}"'
+ExecStart=/bin/sh -c 'DEVICE=$(grep -l -m1 -E "^${CARD_LABEL}$" /sys/devices/virtual/video4linux/*/name | cut -d/ -f6); exec /usr/bin/v4l2-relayd -i "${VIDEOSRC}" -o "appsrc name=appsrc caps=video/x-raw,format=${FORMAT},width=${WIDTH},height=${HEIGHT},framerate=${FRAMERATE} ! videoconvert ! v4l2sink name=v4l2sink device=/dev/$${DEVICE}"'
 Restart=always
 
 [Install]
