--- a/data/etc/modprobe.d/v4l2-relayd.conf
+++ b/data/etc/modprobe.d/v4l2-relayd.conf
@@ -1,1 +1,1 @@
-options v4l2loopback exclusive_caps=1 card_label="Intel MIPI Camera"
+options v4l2loopback devices=2 card_label="Front Camera,Back Camera" exclusive_caps=1,1
